updated image file name

--- a/style.css
+++ b/style.css
@@ -49,11 +49,8 @@ margin: 0 auto;
 background color: #373738;
 }
 
-.footer ul{
-padding: 25px;
-display: inline-block;
-}
 
-.footer li{
+.li{
+background-color:black;
 padding: 4px;
 }
